<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.actionbartest.MainActivity">

    <item
        android:id="@+id/action_myProvider"
        android:icon="@drawable/menu_easyicon"
        app:actionProviderClass="com.example.zhaojing5.myapplication.menu.MyActionProvider"
        app:showAsAction="always"
        android:title="@string/action_myProvider"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/menu_easyicon"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/menu_search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/menu_easyicon"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/menu_easyicon"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_compose"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/menu_easyicon"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/menu_easyicon"
        app:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>